user_review has been renamed to rate_of_current_user on test_detail view and test_detail.html template; 'AnonymousUser' object is not iterable error has been fixed (added check of request.user.is_authenticated to test_detail view); variable has been removed from review url and view and from test_detail.html template; user_id argument has been removed from review view, and user = request.user; fixed error with not showing buttons for voting (reason - they were in outer if); users rates have been stylized as inline-blocks with border-left; __str__ of Test_rate model has been changed; styles and layout for user_tests.html template has been improved

--- a/octapp/static/octapp/css/user_tests.sass
+++ b/octapp/static/octapp/css/user_tests.sass
@@ -7,7 +7,10 @@ p
 
 .test_div_on_user_tests
   font-size: 18px
-  padding-left: 80px
+
+.test_div_on_user_tests .blank_for_indent
+  width: 70px
 
 .div_with_icons a
   font-size: 22px
+
